--- a/Zepto Assignment Solution.ipynb
+++ b/Zepto Assignment Solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        "[497 rows x 6 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
@@ -568,7 +568,7 @@
        "[500 rows x 16 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,24 +653,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(221, b'2.0.0 closing connection h10sm1084162pjs.51 - gsmtp')"
+       "(221, b'2.0.0 closing connection t8sm12007680pgv.35 - gsmtp')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Code to send the file in email\n",
-    "fromaddr = \"bathinasujithsrinivas@gmail.com\"\n",
-    "toaddr = \", \".join(['bathinasujithsrinivas@gmail.com','bathinasrisukeerthi@gmail.com'])\n",
+    "fromaddr = \"from email id\"\n",
+    "toaddr = \", \".join(['to email ids'])\n",
     "   \n",
     "# instance of MIMEMultipart\n",
     "msg = MIMEMultipart()\n",
@@ -692,7 +692,7 @@
     "  \n",
     "# open the file to be sent \n",
     "\n",
-    "attachment = open(\"C:\\\\Users\\\\bsviz\\\\Downloads\\\\Zepto Assignment\\\\\"+filename, \"rb\")\n",
+    "attachment = open(filename, \"rb\")\n",
     "  \n",
     "# instance of MIMEBase and named as p\n",
     "p = MIMEBase('application', 'octet-stream')\n",
@@ -714,7 +714,7 @@
     "s.starttls()\n",
     "  \n",
     "# Authentication\n",
-    "s.login(fromaddr, \"sujith1A@\")\n",
+    "s.login(fromaddr, \"your password\")\n",
     "  \n",
     "# Converts the Multipart msg into a string\n",
     "text = msg.as_string()\n",
@@ -725,13 +725,6 @@
     "# terminating the session\n",
     "s.quit()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
